--- a/PA2/wumpus.cnf
+++ b/PA2/wumpus.cnf
@@ -1,43 +1,40 @@
-# Wumpus World CNF (local area around (1,1), (1,2), (2,1), (2,2))
-# Propositions:
+# Wumpus World CNF 
 #   Pxy   = there is a pit in cell (x,y)
 #   Bxy   = there is a breeze in cell (x,y)
-#   safe22 = cell (2,2) is safe (no pit in 2,2)
+#   safe22 = (2,2) is safe (no pit)
 #
 # World layout 
 # (1,3) (2,3) (3,3)
 # (1,2) (2,2) (3,2)
 # (1,1) (2,1) (3,1)
 
-
 # start square has no pit
 -P11
 
-# There is a pit in at least one of the squares next to it.
+# There is a pit in at least one of the squares next to it
 # If there is a pit next to a square, that square will have a breeze
 
-# B11 <-> (P12 or P21)
-# B11 -> (P12 or P21)
+# If B11 is true, then at least one of P12 or P21 must be true.
 -B11 P12 P21
-# (P12 -> B11) and (P21 -> B11)
+# If P12 is true, then B11 must be true.
 -P12 B11
+# same
 -P21 B11
 
-# B12 <-> (P11 or P13 or P22)
-# B12 -> (P11 or P13 or P22)
+# If B12 is true then one of its neighbors must contain a pit
 -B12 P11 P13 P22
-# (P11 -> B12), (P13 -> B12), (P22 -> B12)
+# If any neighbor has a pit B12 must be T
 -P11 B12
 -P13 B12
 -P22 B12
 
-# B21 <-> (P11 or P22 or P31)
-# B21 -> (P11 or P22 or P31)
+# If B21 is true then one of these squares must have a pit
 -B21 P11 P22 P31
-# (P11 -> B21), (P22 -> B21), (P31 -> B21)
+# Each pit produces a breeze
 -P11 B21
 -P22 B21
 -P31 B21
 
+# (2,2) is safe if safe22 is T
 -safe22 -P22
 P22 safe22
